# poxml

./: .kde-ci.yml  CMakeLists.txt  GettextLexer.cpp  GettextLexer.hpp  GettextParser.cpp  GettextParser.hpp  GettextParserTokenTypes.hpp  GettextParserTokenTypes.txt  Makefile.am  checkXML.c  configure.in.in  docbook_faq.po  docbook_faq.pot  docbook_kabalone.po  docbook_kabalone.pot  docbook_kwrite.po  docbook_kwrite.pot  faq.xml  faq_de.xml  fixsgml  gettext.g  gettextpoutils.cpp  gettextpoutils.h  kabalone.xml  kabalone_da.xml  konqueror.xml  kwrite.xml  kwrite_de.xml  lauri.po  lauri.pot  lauri.xml  lauri_de.xml  parser.cpp  parser.h  po2xml.cpp  po2xml.pl  po_kwrite.doc  qxml.cpp  split.cpp  swappo.cpp  (+4 more)
antlr/: CMakeLists.txt  Makefile.am  configure.in
antlr/antlr/: ANTLRException.hpp  AST.hpp  ASTRefCount.hpp  BitSet.hpp  CMakeLists.txt  CharBuffer.hpp  CharScanner.hpp  InputBuffer.hpp  LLkParser.hpp  Makefile.am  NoViableAltException.hpp  NoViableAltForCharException.hpp  Parser.hpp  RecognitionException.hpp  Token.hpp  antlr_export.h  config.hpp
antlr/src/: CMakeLists.txt  CharScanner.cpp  Makefile.am  Parser.cpp  TreeParser.cpp
cmake/modules/: FindGettextPO.cmake
doc/: CMakeLists.txt  man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/ca/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/da/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/de/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/es/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/et/docs/poxml/: man-split2po.1.docbook
po/fr/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/gl/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/it/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/nl/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/pt/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/pt_BR/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/ru/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/sl/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/sv/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
po/uk/docs/poxml/: man-po2xml.1.docbook  man-split2po.1.docbook  man-swappo.1.docbook  man-xml2pot.1.docbook
tests/: CMakeLists.txt  lauri.po  lauri.xml
